# ANNFASS_Style

./: README.md
3d-AAE/: Makefile  train_gypsum.sh  train_turing.sh
ae2D/: Makefile  main_images.py  main_triplet_embeddings.py  main_triplet_unsupervised.py  run_triplet_embeddings_wrapper.py  run_triplet_unsupervised_wrapper.py
common/: __init__.py  chamfer.py  chamfer_pytorch.py  matplotlib_utils.py  mesh_utils.py  mesh_utils_io.py  mesh_utils_open3d.py  move_files.py  multiprocessing_utils.py  ply2obj.py  rename_dirs_and_files.py  test_mesh_utils.py  test_utils.py  utils.py
decorgan/: cutils.pyx  dataset2.py  dataset_rot.py  decorgan.yml  main.py  modelAE.py  modelAE_GD.py  mymain.py  wrapper_main.py
docs/: 2D-AE-Based.md  3D-AAEBased.md  MinkowskiBased.md  OCNN-Based.md  commands.md  common.md  curvature-based.md
minkowski_based/: Dockerfile  config.py  main.py  py3mink.yml
preprocess/: collect_per_semantic_stats.py  component_stats.py  normalizeobj.py  plot_line_drawings_per_label.py  plot_renderings_multiview_component.py  plot_renderings_unique_components.py  select_views.py  style_stats.py  unique_components.py
preprocess/oriented_bounding_box/cgal_impl/: CMakeLists.txt  Makefile  main.cpp
preprocess/rtsc_utils/rtsc-1.6/: CMakeLists.txt  Makefile  rtsc
preprocess/rtsc_utils/rtsc-1.6/build-with-docker/: Dockerfile  Makefile
preprocess/rtsc_utils/rtsc-1.6/runners/: RidgeValleyExporter.cc  rtsc.cc
resources/: ANNFASS_ELEMENTS_COLORS.json  ANNFASS_STYLES_COLOURS.json  ANNFASS_STYLISTIC_ELEMENTS.json  BUILDNET_ELEMENTS.json  BUILDNET_ELEMENTS_COLORS.json  BUILDNET_ELEMENTS_TO_REMOVE.json  BUILDNET_GROUP_THRESHOLDS_v2.json  BUILDNET_STYLISTIC_ELEMENTS.json  STYLES.txt  (+1 more)
(+902 files in other folders)
